fix: tighten grammar intro gap, default to light theme

--- a/site/static/style.css
+++ b/site/static/style.css
@@ -131,7 +131,7 @@ ruby rt {
 .grammar-intro {
   display: grid;
   gap: var(--s);
-  margin-block: -0.25rem calc(var(--s) * 2);
+  margin-block: -0.5rem calc(var(--s) * 2);
 }
 
 .grammar-intro__pattern {
